--- a/DD/DD.tex
+++ b/DD/DD.tex
@@ -80,7 +80,7 @@ The system offers also the possibility to receive suggestions in order to improv
 \end{itemize}
 \subsection{Reference Documents}
 \begin{itemize}
-	\item IEEE standard for Design Document;
+\item IEEE standard for Design Document;
 \end{itemize}
 \subsection{Document Structure}
 The following sections are structured as below:
@@ -94,7 +94,7 @@ The following sections are structured as below:
 \begin{figure}[h]
 \section{Architectural Design}
 	\subsection{Overview}
-In the figure below it is shown the architecture of the entire system. This description has to be intended not as an overview of the entire system. Details will be shown later in the document.
+In the figure below the architecture of the entire system is shown. This description has to be intended only as an overview of the entire system. Details will be shown later in the document.
 	\includegraphics[scale=0.419]{Diagrams/overview.png}
 	\caption{Architectural overview}
 \end{figure}
@@ -310,67 +310,87 @@ The use of clusters makes the system more scalable. In fact, it will be easier t
 	\item \textbf{Use of load balancers:} The use of load balancers has been decided to make the system more performing. In fact the throughput can be maximized and the response time minimized considerably. This is due to the fact that with the load balancers it's possible to perform parallel execution of different tasks and it is more likely to avoid the overload of the servers.  
 	\item \textbf{Use of relational databases:} Our system uses a relational cloud database. The interaction with the municipality database is possible with a SQL interface provided by the municipality. This interface translates the SQL language in order to be adaptable with the municipality database, even if it hasn't a SQL DBMS.\\
 One of the reasons about the decision to use relational databases is the fact that the data that the system manages and stores is well defined and structured. In fact all the data that needs to be stored can be structured in tables. The photos, that could be the only data treated by SafeStreets that can be more oriented to a non relational database, have only to be analysed to retrieve the license plate and when the analysis is done they don't need to be stored in the database.\\
-We know that operations like the "join" between different tables can slow down the system. However, we think that this aspect doesn't cause relevant problems in our system as the performance constraints aren't so restricted to need to avoid this kind of timing. Furthermore, relational databases have been used for several years and they are used also nowadays for a lot of applications. So, they have a stronger theoretical background than the non relational ones.\\
+We know that operations like the "join" between different tables can slow down the system. However, we think that this aspect doesn't cause relevant problems in our system as the performance constraints aren't so restricted to need to avoid this kind of timing. Furthermore, relational databases have been used for several years and they are used also nowadays for a lot of applications. So they have a stronger theoretical background with respect to the non relational ones.\\
+
+\newpage
+Here it is possible to find the relational schema of the system database, shown with an entity-relationship diagram: \\ \\ \\
 
 
 \begin{figure}[h]
-Here it is possible to find the relational schema of the system database, showed with an entity relationship diagram:\\ \\ \\
 	\includegraphics[scale=0.55]{Diagrams/ER diagram.png}
-	\caption{entity relationship diagram}
+	\caption{Entity-Relationship Diagram}
 \end{figure}
 \FloatBarrier
+
 	
 \end{itemize}
 
 \begin{figure}[h]
 	\section{User interface design}
-Here there will be shown the user interfaces with the help of UX diagrams. In particular there is shown the flow that the user will follow to navigate inside the application. Some aspects concerning the user interfaces design have been already treated in the "Requirement Analysis and Specification Document",if the reader wants to understand in a better and more detailed way, he/she is strongly suggested to refer also to it. In this document it is described only the flow that the user must follow to use the application.
-UX diagrams:\\
+Here there will be shown the user interfaces with the help of UX diagrams. In particular the flow that the user will follow to navigate inside the application is shown. Some aspects concerning the user interfaces design have been already treated in the "Requirement Analysis and Specification Document". If the reader wants to understand this interfaces design in a better and more detailed way, he/she is strongly suggested to refer also to the RASD. In this document only the flow that the user must follow to use the application is described. \\ \\
+\textbf{UX diagram:\\}
 	\includegraphics[scale=0.4]{Diagrams/UX diagram.png}
 	\caption{UX diagram}
 \end{figure}
 \FloatBarrier
 \section{ Requirements Traceability}
-Here it is possible to find an explanation about how the requirements in the rasd map to the to the design elements that can be found in this document.
+Here it is possible to find an explanation about how the requirements in the RASD match with the design elements that can be found in this document.
 
-\begin{longtable}{| p{7 cm} | p{8 cm} |} \hline
+\begin{longtable}{| p{4 cm} | p{11.5 cm} |} \hline
 		Component  & Requirements (RASD) 
 		 \\ \hline
 		\newline \textbf {View} &
 		\begin{itemize}
-		\item \textbf{$[R1]:$:}The system must allow the user to take a picture. 
+		\item \textbf{$[R1]:$}The system must allow the user to take a picture. 
 		\item \textbf{$[R2]:$}The system must allow the user to indicate the street where the violation occurred. 
 		\item \textbf{$[R3]:$}The system must allow the user to indicate the hour and the date when the violation occurred. 
 		\item \textbf{$[R4]:$}The system must allow the user to insert a brief description of the violation. 
-		\item \textbf{$[R5]:$} The system can localize his/her position automatically as alternative to the manual insertion.
 		 \item \textbf{$[R6]:$}The system must allow the user to finally submit the report. 
 		 \item \textbf{$[R9]:$} The pictures must be taken only through the app camera and not imported from the device gallery in order to take photos in real time. 
-		 \item \textbf{$[R14:]$}The system must allow the user to insert the city in which the violation occurred. 
+		 \item \textbf{$[R12]:$} The system must allow the user to insert the street around which he/she wants to check the safety.
+		 \item \textbf{$[R14]:$}The system must allow the user to insert the city to which the inserted street belongs. 
 		 \item \textbf{$[R15]:$}The system must allow the user to insert a number representing the radius within which the system must provide the condition of the streets.
+		 \item \textbf{$[R16]:$}The system must return the safest streets in a map form. These streets must be highlighted on the map.
 		 \item \textbf{$[R23]:$} The system must allow the user to choose between municipality account or private user one. 
-		 \item \textbf{$[R27]$:}The system must allow the user to recover his/her password if he/she has forgotten it.
+		 \item \textbf{$[R27]:$}The system must allow the user to recover his/her password if he/she has forgotten it.
 		 \item \textbf{$[R28]:$} The system must allow the municipality users and the private ones to access the corresponding Home Page after the log-in. 
 		 \item \textbf{$[R29]:$}The system must allow the user to log-out from the platform in every moment by the exit button placed in the Home Page. 
 	\end{itemize} \\ \hline
 		\newline \textbf {User requests manager} &
 		\begin{itemize}
-			\item boh
+			\item \textbf{$[R16]:$}The system must return the safest streets in a map form. These streets must be highlighted on the map.
+			\item \textbf{$[R18]:$} The system must retrieve the information about the streets
+safety and the violation from its cloud database.
 		\end{itemize} \\ \hline
 		\newline \textbf {Municipality Suggestions Requests manager} &
 		\begin{itemize}
-			\item boh
+			\item \textbf{$[R22]$:} The system must provide the suggestions created and dispatched
+by the Data Mining API to the Municipality.
 		\end{itemize} \\ \hline
-		\newline \textbf {Data Mining manager} &
+		\newline \textbf {Suggestion Creation Manager} &
 		\begin{itemize}
-			\item \textbf{$[R17]:$} : The system must run a data mining algorithm to update the information (contained in the database) about the violations and the streets safety. 
-			\item \textbf{$[R19]:$} The system must retrieve the information about violations from the users' reports. 
-			\item \textbf{$[R20]:$} The system must use both data received by the users and by the municipality. 
-			\item \textbf{$[R21]:$}The system must run a data mining algorithm to update the database of the system. It must update the suggestion for the municipality. 
+			\item \textbf{$[R17]:$} The system must run a data mining algorithm to merge the information about the violations and the streets safety(retrieved from the Safestreets database and the Municipality one).
+			 \item \textbf{$[R21]:$} The Data Mining API must create suggestions from the data sent by the system and analysed.
+			 \item \textbf{$[R22]$:} The system must provide the suggestions created and dispatched
+by the Data Mining API to the Municipality.
+			 
+		\end{itemize} \\ \hline
+		\newline \textbf {Data Request manager} &
+		\begin{itemize}
+			\item \textbf{$[R17]:$} The system must run a data mining algorithm to merge the
+information about the violations and the streets safety(retrieved from
+the Safestreets database and the Municipality one).
+			\item \textbf{$[R18]$:} The system must retrieve the information about the streets
+safety and the violation from its cloud database.
+			\item \textbf{$[R19]:$} The system must retrieve the information about violations
+from the Municipality external database.
+			\item \textbf{$[R20]:$} The system must use both data received by the users and by the municipality.
+			\item \textbf{$[R22]$:} The system must provide the suggestions created and dispatched
+by the Data Mining API to the Municipality. 
 		\end{itemize} \\ \hline
 		\newline \textbf {Report Validity manager} &
 		\begin{itemize}
-			\item \textbf{$[R11]:$}The system must check if the reported street exists in reality. 
-			\item \textbf{$[R12]:$} The system must allow the user to insert the street around which he/she wants to check the safety. 
+			\item \textbf{$[R11]:$}The system must check if the reported street exists in reality.  
 		\end{itemize} \\ \hline
 		\newline \textbf {Credentials validity manager Manager} &
 		\begin{itemize}
@@ -380,9 +400,12 @@ Here it is possible to find an explanation about how the requirements in the ras
 			 \item \textbf{$[R26]$:} The system must allow the user (both private user and the municipality) to sign-up if and only if he/she inserts a password that complies the security policy. 
 			 \item \textbf{$[R27]$:}The system must allow the user to recover his/her password if he/she has forgotten it. 
 			 \item \textbf{$[R29]:$}The system must allow the user to log-out from the platform in every moment by the exit button placed in the Home Page. 
-			 \item \textbf{$[R28]:$} The system must allow the municipality users and the private ones to access the corresponding Home Page after the log-in. 
-			 \item \textbf{$[R30]$:}The system must check that the chosen username (chosen during the sign-up phase) must be unique. 
-			 \item \textbf{}
+			 
+			 \item \textbf{$[R30]:$}The system must check that the chosen username (chosen during the sign-up phase) must be unique. 
+			 
+			 \item \textbf{$[R31]:$}The system must allow the user to login if and only if he
+inserts credentials that are associated to an existing account.
+			 \item \textbf{$[R32]:$} The system must store the data associated to a new account in case the sign up is successful.
 		\end{itemize} \\ \hline
 		\newline \textbf {Data manager} &
 		\begin{itemize}
@@ -396,12 +419,15 @@ Here it is possible to find an explanation about how the requirements in the ras
 		\newline \textbf {Data Storage manager} &
 		\begin{itemize}
 			\item \textbf{$[R10]:$} The system must store the report if it is correct.
-			\item \textbf{$[R18]$:} The system must retrieve the information from its database
-			\item \textbf{$[R22]$:} The system must retrieve municipality suggestions from its database. 
+			\item \textbf{$[R18]$:} The system must retrieve the information about the streets
+safety and the violations from its cloud database.
+			\item \textbf{$[R32]:$} The system must store the data associated to a new account in case the sign up is successful.
 		\end{itemize} \\ \hline
-		\newline \textbf {Result Handler} &
+		\newline \textbf {Municipality Data Storage manager} &
 		\begin{itemize}
-			\item \textbf{$[R16]$:} The system must report the safest streets in a map form. These streets must be highlighted on the map. 
+			\item \textbf{$[R19]:$} The system must retrieve the information about violations
+from the Municipality external database.
+	
 		\end{itemize} \\ \hline
 \end{longtable}
 
